cloud.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-deployment
spec:
  replicas: 0
  selector:
    matchLabels:
      app: my-web-app
  template:
    metadata:
      labels:
        app: my-web-app
        environment: cloud
    spec:
      runtimeClassName: kata-remote
      containers:
      - name: my-web-app
        image: quay.io/eesposit/http-echo-ema:latest
        ports:
        - containerPort: 8080
          protocol: TCP
        securityContext:
          privileged: true
