deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: 'ema-http-echo'
spec:
  selector:
    matchLabels:
      app: ema-http-echo
  replicas: 1
  template:
    metadata:
      labels:
        app: ema-http-echo
    spec:
      runtimeClassName: kata
      containers:
        - name: http-container
          image: >-
            quay.io/eesposit/http-echo-ema:latest
          ports:
            - containerPort: 8080
              protocol: TCP
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
