prem.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: on-prem-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-web-app
  template:
    metadata:
      labels:
        app: my-web-app
    spec:
      containers:
      - name: my-web-app
        image: quay.io/eesposit/http-echo-ema:latest
        resources:
          request:
            memory: "1Gi"
          limits:
            memory: "1Gi"
        ports:
        - containerPort: 8080
        securityContext:
            privileged: true
