service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-echo-service
  labels:
    app: http-echo
spec:
  selector:
    app: http-echo
  ports:
    - port: 8888
